--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -34,3 +34,30 @@ button {
 a {
   text-decoration: none;
 }
+
+.aside-wrapper {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+  .aside-wrapper {
+    display: flex;
+    gap: 32px;
+    padding-bottom: 100px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .aside-wrapper {
+    flex-direction: column;
+    gap: 86px;
+    padding-bottom: 0;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .main-content {
+    flex-grow: 1;
+  }
+}
