--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,23 @@
-
-
-    
+<div class="container header-container">
+  <a class="link logo" href="./index.html">
+    <svg width="24" height="24">
+      <use href="#"></use>
+    </svg>
+    <span class="logo-text">Bookshelf</span>
+  </a>
+  <!-- <div class="switch-btn switch-on"></div> -->
+  <label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>
+  
+  <button
+    class="menu-hamburger js-open-menu-hamburger"
+    aria-expanded="false"
+    aria-controls="mobile-menu"
+  >
+    <svg class="menu-hamburger-icon-open" width="28" height="28">
+      <use href="#"></use>
+    </svg>
+  </button>
+</div>
