--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -8,6 +8,12 @@
 
 .logo-text {
     margin-right: 144px;
+    
+}
+
+.dark-theme{
+    background-color: black;
+    color: white;
 }
 
 .switch {
@@ -58,9 +64,9 @@ box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(19px);
-    -ms-transform: translateX(19px);
-    transform: translateX(19px);
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
   }
   
   /* Rounded sliders */
