--- a/src/partials/aside-categories.html
+++ b/src/partials/aside-categories.html
@@ -1,23 +1,4 @@
 <div class="aside-container">
-  <p class="aside-title">all categories
-  <ul calss="aside-link">
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    <li class="aside-item">Combined Print and E-book Fiction</li>
-    </p>
-  </ul>
+  <p class="aside-title">all categories</p>
+  <ul class="aside-list"></ul>
 </div>
