--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -54,7 +54,7 @@ a {
 }
 
 body {
-  font-size: var(--main-font);
+  font-family: var(--main-font);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.12;
