--- a/src/css/layout/aside-categories.css
+++ b/src/css/layout/aside-categories.css
@@ -1,6 +1,6 @@
 .aside-container {
 
-    width: 335px;
+    max-width: 335px;
     height: 228px;
     overflow-y: auto;
 }
@@ -18,8 +18,6 @@ height: 114px;
 }
 
 .aside-title {
-  width: 127px;
-  height: 18px;
   
     font-family: 'DM Sans';
     font-weight: 700;
@@ -31,25 +29,30 @@ height: 114px;
   
     color: #4F2EE8;
   
-  padding-bottom: 24px;
+  margin-bottom: 24px;
 }
 
-.aside-item:hover {
-  width: 307px;
-  height: 18px;
-  font-family: 'DM Sans';
+.aside-link:hover {
+font-family: 'DM Sans';
 
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(18/14);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(18/14);
 
-    letter-spacing: -0.02em;
-    text-transform: uppercase;
-  
-    color: #4F2EE8;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+
+  color: #4F2EE8;
 }
-  .aside-link{
 
+.aside-item:hover{
+font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+
+  color: #4F2EE8;
 }
 
 .aside-item {
@@ -64,12 +67,12 @@ height: 114px;
     
     color: rgba(17, 17, 17, 0.6);
 
-    padding-bottom: 24px;
+   margin-bottom: 24px;
 }
 
 @media only screen and (min-width: 768px) {
 .aside-container{
-width: 337px;
+
 height: 472px;
 }
 .aside-item {
@@ -77,17 +80,17 @@ font-family: 'DM Sans';
 font-weight: 400;
 font-size: 18px;
 line-height: calc(24/18);
-padding-bottom: 32px;
+margin-bottom: 32px;
     }
 
-.aside-item:hover {
+/* .aside-item:hover {
 
           
 font-weight: 700;
 font-size: 18px;
 line-height: calc(24/18);
             
-}
+} */
 .aside-title {
 width: 143px;
 height: 24px;
@@ -100,7 +103,7 @@ padding-bottom: 32px;
 
 @media only screen and (min-width: 1440px) {
   .aside-container {
-width: 356px;
+
 height: 472px;
  
   }
