--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <div class="container header-container">
   <a class="link logo" href="./index.html">
     <svg width="24" height="24">
-      <use href="#"></use>
+      <use href="./images/sprite.svg#logo"></use>
     </svg>
     <span class="logo-text">Bookshelf</span>
   </a>
@@ -17,7 +17,7 @@
     aria-controls="mobile-menu"
   >
     <svg class="menu-hamburger-icon-open" width="28" height="28">
-      <use href="#"></use>
+      <use href="./images/sprite.svg#burger"></use>
     </svg>
   </button>
 </div>
