--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -12,8 +12,12 @@
 }
 
 .dark-theme{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 1);
     color: white;
+}
+
+.dark-theme.header-container{
+background-color: rgba(17, 17, 17, 1);
 }
 
 .switch {
@@ -86,4 +90,8 @@ box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
     border: none;
     width: 28px;
     height: 28px;
+}
+
+.menu-hamburger-icon-open{
+    stroke: black;
 }
