--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -9,7 +9,7 @@
       <img
         class="modal-img"
         src="./images/modal-window/image-placeholder.jpeg"
-        alt=""
+        alt="Book cover"
       />
       <div class="modal-info-container">
         <p class="modal-book-name">HELLO BEAUTIFUL</p>
