--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,3 +6,4 @@
 @import './layout/main-page.css';
 @import './layout/modal-window.css';
 @import './layout/burger-menu.css';
+@import './layout/loader.css';
