--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -5,3 +5,4 @@
 @import './layout/shopping-list-main.css';
 @import './layout/modal-window.css';
 @import './layout/burger-menu.css';
+@import './layout/loader.css';
