--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -1,4 +1,4 @@
-<div class="backdrop">
+<div class="backdrop is-hidden">
   <div class="modal">
     <button class="modal-close-btn" type="button">
       <svg class="x-close" width="12" height="12">
