--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,23 +1,61 @@
 <div class="container header-container">
-  <a class="link logo" href="./index.html">
-    <svg width="24" height="24">
-      <use href="./images/sprite.svg#logo"></use>
-    </svg>
-    <span class="logo-text">Bookshelf</span>
-  </a>
-  <!-- <div class="switch-btn switch-on"></div> -->
-  <label class="switch">
-    <input type="checkbox">
-    <span class="slider round"></span>
-  </label>
+    <!-- <div class="center-align"> -->
+      <div class="logo-header">
+        <a class="logo" href="./index.html">
+          <svg width="24" height="24">
+            <use href="./images/sprite.svg#logo"></use>
+          </svg>
+          <svg class="bookshelf-logo" width="77" height="13">
+            <use href="./images/sprite.svg#bookshelf"></use>
+          </svg>
+          <!-- <span class="logo-text-part">Bookshelf</span> -->
+        </a>
+      </div>
   
-  <button
-    class="menu-hamburger js-open-menu-hamburger"
-    aria-expanded="false"
-    aria-controls="mobile-menu"
-  >
-    <svg class="menu-hamburger-icon-open" width="28" height="28">
-      <use href="./images/sprite.svg#burger"></use>
-    </svg>
-  </button>
-</div>
+      <div class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </div>
+  
+      <button
+        class="menu-hamburger js-open-menu-hamburger"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg class="menu-hamburger-icon-open" width="28" height="28">
+          <use href="./images/sprite.svg#burger"></use>
+        </svg>
+      </button>
+    <!-- </div> -->
+  </div>
+  
+  
+
+
+<!-- <div class="container header-container">
+  <div class="logo-header">
+    <a class="link logo" href="./index.html">
+        <svg width="24" height="24">
+          <use href="./images/sprite.svg#logo"></use>
+        </svg>
+        <span class="logo-text">Bookshelf</span>
+      </a>
+  </div>
+  <div class="switch-btn switch-on"></div> -->
+  <!-- <div class="center-align">
+    <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
+      
+      <button
+        class="menu-hamburger js-open-menu-hamburger"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg class="menu-hamburger-icon-open" width="28" height="28">
+          <use href="./images/sprite.svg#burger"></use>
+        </svg>
+      </button>
+  </div>
+</div> -->
