--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -1,4 +1,5 @@
 @import './base/common.css';
+@import './layout/main-page.css';
 @import './base/container.css';
 @import './layout/header.css';
 @import './layout/aside-support-ukraine.css';
