--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <button class="btn modal-btn" type="button">add to shopping list</button>
-    <p class="modal-info">
+    <p class="modal-info is-hidden">
       Сongratulations! You have added the book to the shopping list. To delete,
       press the button “Remove from the shopping list”.
     </p>
