--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -64,7 +64,6 @@ body {
 
 .aside-wrapper {
   padding-top: 40px;
-  padding-bottom: 40px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -85,10 +84,18 @@ body {
 
 .main-content {
   padding-top: 40px;
+  padding-bottom: 80px;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-content {
+    padding-bottom: 100px;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
   .main-content {
+    padding-bottom: 72px;
     flex-grow: 1;
   }
 }
