--- a/src/partials/aside-support-ukraine.html
+++ b/src/partials/aside-support-ukraine.html
@@ -3,7 +3,7 @@
     <div class="sup-ukr-header">
     <p class="sup-ukr-text">Support Ukraine</p>
     <svg class="sup-ukr-gerb" width="20" height="32">
-      <use href="/src/images/sprite.svg#icon-ukr-gerb-svg"></use>
+      <use href="./images/sprite.svg#icon-ukr-gerb-svg"></use>
     </svg>
   </div>
   <div class="support-company">
@@ -15,7 +15,7 @@
       <img
         class="sup-company"
         style="height: 32px"
-        src="/src/images/aside-support-ukraine/666(1).svg"
+        src="./images/aside-support-ukraine/save-the-children.png"
         alt="save-the-children"
       />
     </a>
@@ -27,7 +27,7 @@
 "
       ><img
         style="height: 32px"
-        src="/src/images/aside-support-ukraine/project-hope.png"
+        src="./images/aside-support-ukraine/project-hope.png"
         alt="project-hope"
     /></a>
   </div>
