--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,149 +1,144 @@
 .header-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* .center-align {
-    display: flex;
-    align-items: center;
-  } */
-  
-  .logo-header {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-  }
-  
-  .logo-text-part {
-    vertical-align: middle;
-  }
-  
-  .switch {
-    /* display: flex; */
-    align-items: center;
-    margin-right: 10px;
-  }
-  
-  .menu-hamburger {
-    margin-left: 10px;
-  }
-  
-
-/* .header-container {
   display: flex;
-  justify-content: center;
-
+  justify-content: space-between;
   align-items: center;
   padding-top: 18px;
   padding-bottom: 18px;
 }
 
-.center-align {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-  } */
-
-/* .logo-header {
-    display: flex;
-    align-items: center;
-    /* justify-content: center;
-  align-content: center; */
-
-
-.logo-text {
-    margin-right: 144px;
-    
+.logo-images {
+  display: flex;
+  align-items: center;
 }
 
-.dark-theme{
-    background-color: var(--light-black-color);
-    color: white;
+
+.logo {
+  margin-right: 8px;
 }
 
-.dark-theme.header-container{
-background-color: var(--black-color);
-}
-
-.switch {
-    position: relative;
-    /* display: flex; */
-    /* justify-content: center; */
-  /* align-content: center; */
-    width: 40px;
-    height: 20px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {display:none;}
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(180deg, #4F2EE8 0%, #DCDCDC 100%);
-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 18px;
-    width: 18px;
-    top: 1px;
-    left: 1px;
-    /* bottom: 4px; */
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background: linear-gradient(180deg, #4F2EE8 0%, #686868 100%);
-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
-  }
-  
-  input:focus + .slider {
-    background: linear-gradient(180deg, #4F2EE8 0%, #686868 100%);
-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    transform: translateX(20px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
-  
-
-
-.menu-hamburger {
-    margin-left: 14px;
-    padding: 0px;
-    border: none;
-    width: 28px;
-    height: 28px;
-}
-
-.menu-hamburger-icon-open{
-    stroke: black;
+@media only screen and (min-width: 768px){
+    .logo {
+        margin-right: 40px;
+    }
 }
 
 .bookshelf-logo {
-    fill: black;
+  fill: black;
 }
+
+.header-nav {
+    display: none;
+}
+
+@media only screen and (min-width: 768px) {
+    .header-nav {
+      display: flex;
+      margin-right: auto;
+    }
+  }
+
+  .header-nav-list {
+    display: flex;
+    gap: 16px;
+  }
+
+  .header-nav-item {
+    color: var(--light-black-color);
+  }
+
+.switсher-burger {
+  display: flex;
+  align-items: center;
+}
+
+.menu-burger {
+  padding: 0px;
+  border: none;
+  width: 28px;
+  height: 28px;
+  margin-left: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+    .menu-burger {
+        display: none;
+    }  
+}
+
+.menu-burger-icon-open {
+  stroke: black;
+}
+
+.switch {
+  position: relative;
+  align-items: center;
+  width: 40px;
+  height: 20px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
+  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 18px;
+  width: 18px;
+  top: 1px;
+  left: 1px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background: linear-gradient(180deg, #4f2ee8 0%, #686868 100%);
+  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+input:focus + .slider {
+  background: linear-gradient(180deg, #4f2ee8 0%, #686868 100%);
+  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/*Dark theme*/
+
+.dark-theme {
+  background-color: var(--light-black-color);
+  color: white;
+}
+
+.dark-theme.header-container {
+  background-color: var(--black-color);
+}
+
+
+
