--- a/src/css/layout/aside-categories.css
+++ b/src/css/layout/aside-categories.css
@@ -47,10 +47,42 @@ font-size: 16px;
 color: #4F2EE8;
 letter-spacing: -0.02em;
 text-transform: uppercase;
-
 }
 
+.categories-item{
+display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+
+  margin-top: 40px;
+}
+
+.categories-title {
+margin-bottom: 40px;
+  font-size: 32px;
+  line-height: calc(38 / 32);
+  letter-spacing: -0.04em;
+
+  color: var(--light-black-color);
+}
+.categories-title-decor {
+color: var(--blue-color);
+}
 @media only screen and (min-width: 768px) {
+
+.categories-item {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+gap: 25px;
+}
+.category-list-item {
+flex-basis: calc((100% - 2 * 25px)/3);
+
+}
 
 .aside-container{
 height: 472px;
