--- a/src/css/layout/aside-categories.css
+++ b/src/css/layout/aside-categories.css
@@ -48,16 +48,14 @@ color: #4F2EE8;
 letter-spacing: -0.02em;
 text-transform: uppercase;
 }
-
-.categories-item{
-display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 8px;
-
-  margin-top: 40px;
+@media only screen and (max-width: 768px) {
+  .categories-item{
+    display: flex;
+      flex-direction: column;
+      align-items: flex-start;
 }
+}
+
 
 .categories-title {
 margin-bottom: 40px;
@@ -73,14 +71,14 @@ color: var(--blue-color);
 @media only screen and (min-width: 768px) {
 
 .categories-item {
-display: flex;
-justify-content: center;
-align-items: center;
-flex-wrap: wrap;
-gap: 25px;
+    display: flex;
+      gap: 25px;
+      flex-wrap: wrap;
+      
 }
+
 .category-list-item {
-flex-basis: calc((100% - 2 * 25px)/3);
+flex-basis: calc((100% - 2 * 25px) / 3);
 
 }
 
@@ -109,4 +107,16 @@ line-height: calc(24/18);
  .aside-container {
 height: 472px;
 }
+.categories-item {
+  display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
+
+}
+
+.category-list-item {
+  flex-basis: calc((100% - 4 * 40px) / 5);
+
+}
+
 }
