--- a/src/css/layout/aside-support-ukraine.css
+++ b/src/css/layout/aside-support-ukraine.css
@@ -69,9 +69,9 @@
   background-color: var(--white-color);
   border-radius: 50%;
 }
-body {
+/* body {
   background-color: tomato;
-}
+} */
 .sub-btn-svg {
   color: var(--blue-color);
   fill: currentColor;
