--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -6,7 +6,7 @@
       </svg>
     </button>
     <div class="modal-book">
-      <img
+      <!-- <img
         class="modal-img"
         src="./images/modal-window/image-placeholder.jpeg"
         alt="Book cover"
@@ -66,10 +66,10 @@
               /> </picture
           ></a>
         </div>
-      </div>
+      </div> -->
     </div>
     <button class="btn modal-btn" type="button">add to shopping list</button>
-    <p class="modal-info is-hidden">
+    <p class="modal-info">
       Сongratulations! You have added the book to the shopping list. To delete,
       press the button “Remove from the shopping list”.
     </p>
