--- a/src/css/layout/main-page.css
+++ b/src/css/layout/main-page.css
@@ -23,15 +23,22 @@
 .category-list {
 }
 
-.category-list-item:not(:last-child) {
-  margin-bottom: 40px;
+@media only screen and (min-width: 768px) {
+  .top-list-item {
+    margin-bottom: 40px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   .books-list {
     display: flex;
     gap: 25px;
-   
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .books-list {
+    margin-bottom: 20px;
   }
 }
 
@@ -48,11 +55,26 @@
 }
 
 .book-image {
-  max-width: 100%;
+  width: 335px;
+  height: 485px;
+  /* max-width: 100%; */
   /* height: 485px; */
-  border-radius: 8px;
   object-fit: cover;
   border-radius: 8px;
+}
+
+@media only screen and (min-width: 768px) {
+  .book-image {
+    width: 218px;
+    height: 316px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .book-image {
+    width: 180px;
+    height: 256px;
+  }
 }
 
 .book-thumb {
