--- a/src/css/layout/aside-categories.css
+++ b/src/css/layout/aside-categories.css
@@ -4,6 +4,24 @@
   overflow-y: auto;
 }
 
+@media only screen and (max-width: 767px) {
+  .aside-container {
+    margin-bottom: 40px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .aside-container {
+    max-width: 337px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .aside-container {
+    max-width: 356px;
+  }
+}
+
 .aside-container::-webkit-scrollbar {
   width: 8px;
   height: 114px;
