--- a/src/css/layout/aside-categories.css
+++ b/src/css/layout/aside-categories.css
@@ -21,7 +21,7 @@
   letter-spacing: -0.02em;
   text-transform: uppercase;
 
-  color: var(--blue-color);
+  /* color: var(--blue-color); */
 
   margin-bottom: 24px;
 }
@@ -44,6 +44,15 @@
   letter-spacing: -0.02em;
   text-transform: uppercase;
 }
+
+.active {
+    font-weight: 700;
+      font-size: 16px;
+      color: #4f2ee8;
+      letter-spacing: -0.02em;
+      text-transform: uppercase;
+}
+
 @media only screen and (max-width: 767px) {
   .categories-item {
     display: flex;
