--- a/src/partials/aside-support-ukraine.html
+++ b/src/partials/aside-support-ukraine.html
@@ -5,66 +5,71 @@
       <use href="./images/sprite.svg#icon-ukr-gerb-svg"></use>
     </svg>
   </div>
-  <div class="sup-content-wrp">
-    <div class="support-company">
-      <p class="sup-comp-numb">01</p>
-      <a href="https://www.savethechildren.net">
+  <div class="sup-content-wrp"></div>
+  <div class="btn-wrapper">
+    <button type="button" class="sup-ukr-scroll-btn">
+      <svg class="sub-btn-svg">
+        <use
+          class="sup-svg-use"
+          href="/src/images/sprite.svg#icon-arr-dwn-svg"
+        ></use>
+      </svg>
+    </button>
+  </div>
+</div>
+<!-- width="11.67px" height="5.98px -->
+
+<!---------перший варіант розмітки -------------- -->
+<!-- <a href="https://www.savethechildren.net">
         <img
           class="sup-company"
           style="height: 32px"
           src="./images/aside-support-ukraine/save-the-children.png"
           alt="save-the-children"
         />
-      </a>
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">02</p>
-      <a
+      </a> -->
+<!--  -->
+<!-- <a
         href="https://www.projecthope.org"
         ><img
           style="height: 32px"
           src="./images/aside-support-ukraine/project-hope.png"
           alt="project-hope"
-      /></a>
+      /></a> -->
+
+<!-- --------------другий варінт розмітки--------- -->
+
+<!-- <div class="support-company">
+  
+    <div>
+      <p class="sup-comp-numb">01</p>
+
+    </div>
+    <div class="support-company">
+      <p class="sup-comp-numb">02</p>
+
     </div>
     <div class="support-company">
       <p class="sup-comp-numb">03</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
     </div>
     <div class="support-company">
-      <p class="sup-comp-numb">04</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
+      <p class="sup-comp-numb">04</p> 
     </div>
     <div class="support-company">
       <p class="sup-comp-numb">05</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
     </div>
     <div class="support-company">
       <p class="sup-comp-numb">06</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
     </div>
     <div class="support-company">
       <p class="sup-comp-numb">07</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
     </div>
     <div class="support-company">
       <p class="sup-comp-numb">08</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
     </div>
     <div class="support-company">
       <p class="sup-comp-numb">09</p>
-      <!-- <a href=""><img style="height: 32px" src="" alt="" /></a> -->
     </div>
-  </div>
-  <div class="btn-wrapper">
-    <button type="button" class="sup-ukr-scroll-btn">
-      <svg class="sub-btn-svg" ">
-        <use
-          class="sup-svg-use"
-          href="/src/images/sprite.svg#icon-arr-dwn-svg"
-        ></use>
-      </svg>
-  </button>
-  </div>
-</div>
-<!-- width="11.67px" height="5.98px -->
+</div> -->
+
+<!-- <img src="/src/images/aside-support-ukraine/save-the-children.png" alt=""> -->
