--- a/src/partials/aside-categories.html
+++ b/src/partials/aside-categories.html
@@ -1,6 +1,6 @@
 <div class="aside-container">
   <a href="./index.html">
-    <p class="aside-title">all categories</p>
+    <p class="aside-title active">All categories</p>
   </a>
   <ul class="aside-list"></ul>
 </div>
