add-styless-for-logo

--- a/src/css/layout/aside-support-ukraine.css
+++ b/src/css/layout/aside-support-ukraine.css
@@ -58,6 +58,7 @@
   fill: currentColor;
 }
 .support-company {
+  width: 150px;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -69,6 +70,7 @@
   color: var(--white-color);
 }
 .sup-company-img {
+  object-fit: contain;
   height: 32px;
 }
 .sup-ukr-scroll-btn {
