--- a/src/partials/aside-support-ukraine.html
+++ b/src/partials/aside-support-ukraine.html
@@ -5,7 +5,7 @@
       <use href="./images/sprite.svg#icon-ukr-gerb-svg"></use>
     </svg>
   </div>
-  <div class="sup-content-wrp"></div>
+  <ul class="sup-content-wrp"></ul>
   <div class="btn-wrapper">
     <button type="button" class="sup-ukr-scroll-btn">
       <svg class="sub-btn-svg">
@@ -17,59 +17,3 @@
     </button>
   </div>
 </div>
-<!-- width="11.67px" height="5.98px -->
-
-<!---------перший варіант розмітки -------------- -->
-<!-- <a href="https://www.savethechildren.net">
-        <img
-          class="sup-company"
-          style="height: 32px"
-          src="./images/aside-support-ukraine/save-the-children.png"
-          alt="save-the-children"
-        />
-      </a> -->
-<!--  -->
-<!-- <a
-        href="https://www.projecthope.org"
-        ><img
-          style="height: 32px"
-          src="./images/aside-support-ukraine/project-hope.png"
-          alt="project-hope"
-      /></a> -->
-
-<!-- --------------другий варінт розмітки--------- -->
-
-<!-- <div class="support-company">
-  
-    <div>
-      <p class="sup-comp-numb">01</p>
-
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">02</p>
-
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">03</p>
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">04</p> 
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">05</p>
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">06</p>
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">07</p>
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">08</p>
-    </div>
-    <div class="support-company">
-      <p class="sup-comp-numb">09</p>
-    </div>
-</div> -->
-
-<!-- <img src="/src/images/aside-support-ukraine/save-the-children.png" alt=""> -->
