--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,3 +7,4 @@
 @import './layout/modal-window.css';
 @import './layout/burger-menu.css';
 @import './layout/loader.css';
+@import './layout/scroll-up.css';
