--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -4,6 +4,15 @@
   align-items: center;
   padding-top: 18px;
   padding-bottom: 18px;
+  border: 1.5px solid #111111;
+border-radius: 0px 0px 8px 8px;
+}
+
+@media only screen and (min-width: 768px) {
+  .header-container {
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
 }
 
 .logo-images {
@@ -11,40 +20,70 @@
   align-items: center;
 }
 
-
 .logo {
   margin-right: 8px;
 }
 
-@media only screen and (min-width: 768px){
-    .logo {
-        margin-right: 40px;
-    }
+@media only screen and (min-width: 768px) {
+  .logo {
+    margin-right: 40px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .logo {
+    margin-right: 76px;
+  }
 }
 
 .bookshelf-logo {
   fill: black;
+  margin-left: 8px;
 }
 
 .header-nav {
-    display: none;
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
-    .header-nav {
-      display: flex;
-      margin-right: auto;
-    }
-  }
-
-  .header-nav-list {
+  .header-nav {
     display: flex;
-    gap: 16px;
+    margin-right: auto;
   }
+}
 
-  .header-nav-item {
-    color: var(--light-black-color);
+.header-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+@media only screen and (min-width: 1440px) {
+  .header-nav-list {
+    gap: 24px;
   }
+}
+
+.header-nav-link {
+  color: var(--light-black-color);
+  line-height: 1.28;
+  letter-spacing: 0.04;
+  font-weight: 500;
+}
+
+.current {
+  background-color: var(--yellow-color);
+  padding: 8px 16px;
+  border-radius: 36px;
+  font-weight: 700;
+  border: none;
+}
+
+.shopping-list-header {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 
 .switсher-burger {
   display: flex;
@@ -59,14 +98,20 @@
   margin-left: 14px;
 }
 
-@media only screen and (min-width: 768px) {
-    .menu-burger {
-        display: none;
-    }  
+@media only screen and (min-width: 1440px) {
+  .login-btn {
+    margin-left: 24px;;
+  }
 }
 
 .menu-burger-icon-open {
-  stroke: black;
+  stroke: var(--black-color);
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-burger {
+    display: none;
+  }
 }
 
 .switch {
@@ -74,6 +119,12 @@
   align-items: center;
   width: 40px;
   height: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .switch {
+    margin-right: 24px;
+  }
 }
 
 .switch input {
@@ -129,6 +180,29 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.login-btn {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .login-btn {
+    width: 184px;
+    height: 48px;
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    border: 1.5px solid #111111;
+    border-radius: 18px;
+    font-weight: 500;
+    padding: 14px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.arrow-right {
+  stroke: var(--yellow-color);
+}
+
 /*Dark theme*/
 
 .dark-theme {
@@ -136,9 +210,30 @@ input:checked + .slider:before {
   color: white;
 }
 
-.dark-theme.header-container {
+.dark-theme .header-container {
   background-color: var(--black-color);
 }
 
+.dark-theme .bookshelf-logo {
+  fill: var(--white-color);
+}
 
+.dark-theme .menu-burger-icon-open {
+  stroke: var(--white-color);
+}
+
+.dark-theme .header-nav-link{
+  color: var(--white-color);
+  fill: var(--white-color);
+}
+
+.dark-theme .current{
+  color: var(--black-color);
+}
+
+.dark-theme .header-container{
+  border: 1.5px solid var(--white-color);
+border-radius: 0px 0px 8px 8px;
+
+}
 
