--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -5,7 +5,7 @@
   padding-top: 18px;
   padding-bottom: 18px;
   border: 1.5px solid #111111;
-border-radius: 0px 0px 8px 8px;
+  border-radius: 0px 0px 8px 8px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -100,7 +100,7 @@ border-radius: 0px 0px 8px 8px;
 
 @media only screen and (min-width: 1440px) {
   .login-btn {
-    margin-left: 24px;;
+    margin-left: 24px;
   }
 }
 
@@ -202,38 +202,3 @@ input:checked + .slider:before {
 .arrow-right {
   stroke: var(--yellow-color);
 }
-
-/*Dark theme*/
-
-.dark-theme {
-  background-color: var(--light-black-color);
-  color: white;
-}
-
-.dark-theme .header-container {
-  background-color: var(--black-color);
-}
-
-.dark-theme .bookshelf-logo {
-  fill: var(--white-color);
-}
-
-.dark-theme .menu-burger-icon-open {
-  stroke: var(--white-color);
-}
-
-.dark-theme .header-nav-link{
-  color: var(--white-color);
-  fill: var(--white-color);
-}
-
-.dark-theme .current{
-  color: var(--black-color);
-}
-
-.dark-theme .header-container{
-  border: 1.5px solid var(--white-color);
-border-radius: 0px 0px 8px 8px;
-
-}
-
