--- a/src/css/layout/modal-window.css
+++ b/src/css/layout/modal-window.css
@@ -134,7 +134,7 @@
   }
 }
 
-.modal-book-descr {
+.modal-book-desc {
   font-weight: 400;
   line-height: 1.28;
   letter-spacing: -0.04em;
@@ -143,7 +143,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .modal-book-descr {
+  .modal-book-desc {
     margin-bottom: 20px;
   }
 }
