--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -13,8 +13,8 @@
       />
       <div class="modal-info-container">
         <p class="modal-book-name">HELLO BEAUTIFUL</p>
-        <p class="modal-book-author">Ann Napolitano</p>
-        <p class="modal-book-descr">
+        <p class="modal-book-author">Ann </p>
+        <p class="modal-book-desc">
           In a homage to Louisa May Alcott’s “Little Women,” a young man’s dark
           past resurfaces as he gets to the know the family of his college
           sweetheart.
