--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -68,7 +68,7 @@
         </div>
       </div> -->
     </div>
-    <button class="btn modal-btn" type="button">add to shopping list</button>
+    <button class="btn modal-btn" type="button"></button>
     <p class="modal-info">
       Сongratulations! You have added the book to the shopping list. To delete,
       press the button “Remove from the shopping list”.
