--- a/src/css/layout/main-page.css
+++ b/src/css/layout/main-page.css
@@ -118,6 +118,8 @@
   align-items: center;
   justify-content: center;
 
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
   width: 100%;
   height: 70px;
   padding: 40px 32px;
