--- a/src/css/layout/main-page.css
+++ b/src/css/layout/main-page.css
@@ -77,8 +77,6 @@
 .book-image {
   width: 335px;
   height: 485px;
-  /* max-width: 100%; */
-  /* height: 485px; */
   object-fit: cover;
   border-radius: 8px;
 }
@@ -182,6 +180,9 @@
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: var(--light-black-color);
+  transition: background-color var(--transition-duration) var(--timing-function),
+    color var(--transition-duration) var(--timing-function),
+    border-color var(--transition-duration) var(--timing-function);
 }
 
 .category-list-button:hover,
