--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -8,3 +8,4 @@
 @import './layout/burger-menu.css';
 @import './layout/loader.css';
 @import './layout/scroll-up.css';
+@import './layout/dark-theme.css';
