--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -1,5 +1,5 @@
 <div class="backdrop is-hidden">
-  <div class="modal">
+  <div class="modal-box">
     <button class="modal-close-btn" type="button">
       <svg class="x-close" width="12" height="12">
         <use href="./images/sprite.svg#x-close"></use>
