--- a/src/css/layout/burger-menu.css
+++ b/src/css/layout/burger-menu.css
@@ -1,5 +1,5 @@
 
-.modal {
+.burger-modal {
     position: fixed;
     top: 60px;
     left: 0;
@@ -25,13 +25,13 @@
   }
   
   @media screen and (min-width: 768px) {
-    .modal,
+    .burger-modal,
     .js-open-menu-hamburger {
       display: none;
     }
   }
   
-  .modal-content {
+  .burger-modal-content {
     position: relative;
     top: 60px;
     max-width: 375px;
@@ -42,7 +42,7 @@
    
   }
   
-  .modal-btn {
+  .burger-modal-btn {
     position: absolute;
     top: 10px;
     right: 0px;
@@ -52,7 +52,7 @@
     z-index: 2;
   }
   
-  .modal-icon-close {
+  .burger-modal-icon-close {
     stroke: black;
   }
   
@@ -71,7 +71,7 @@
   }
 
 
- .modal-content .header-nav {
+ .burger-modal-content .header-nav {
    display: flex;
    flex-direction: column;
    justify-content: center;
