--- a/src/css/layout/modal-window.css
+++ b/src/css/layout/modal-window.css
@@ -14,7 +14,7 @@
   display: none;
 }
 
-.modal {
+.modal-box {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,7 +31,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .modal {
+  .modal-box {
     max-width: 500px;
     min-height: 385px;
     padding: 40px;
