--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,7 +1,7 @@
-<div class="container modal" id="modal">
-  <div class="modal-content">
-    <button class="modal-btn" type="button" onclick="closeModal()">
-      <svg class="modal-icon-close" width="14" height="14">
+<div class="container burger-modal" id="burger-modal">
+  <div class="burger-modal-content">
+    <button class="burger-modal-btn" type="button" onclick="closeModal()">
+      <svg class="burger-modal-icon-close" width="14" height="14">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
     </button>
