--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,10 +1,10 @@
-<div class="container burger-modal" id="burger-modal">
-  <div class="burger-modal-content">
-    <button class="burger-modal-btn" type="button" onclick="closeModal()">
-      <svg class="burger-modal-icon-close" width="14" height="14">
+<div class="container mobile-modal" id="modal">
+  <div class="modal-content">
+    <!-- <button class="modal-btn" type="button" onclick="closeModal()">
+      <svg class="modal-icon-close" width="14" height="14">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
-    </button>
+    </button> -->
 
     <button class="btn login-btn login-modal" type="button">
       Sign up<svg class="arrow-right" width="20" height="20">
