Add notiflix and tui-pagination

--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -9,3 +9,4 @@
 @import './layout/loader.css';
 @import './layout/scroll-up.css';
 @import './layout/dark-theme.css';
+@import './layout/pagination.css';
