--- a/src/css/layout/shopping-list-main.css
+++ b/src/css/layout/shopping-list-main.css
@@ -1,15 +1,8 @@
-.shopping-title{
-    margin-bottom: 120px;
-}
-@media only screen and (min-width: 768px) {
-    .shopping-title {
-        margin-bottom: 140px;
-    }
-}
-
 .shopping-list-text{
     margin: 0 auto;
     max-width: 244px;
+
+    margin-top: 120px;
     margin-bottom: 14px;
     text-align: center;
 
@@ -22,6 +15,8 @@
 @media only screen and (min-width: 768px) {
     .shopping-list-text {
         max-width: 349px;
+
+        margin-top: 140px;
         margin-bottom: 20px;
 
         font-size: 18px;
