--- a/src/partials/shopping-list-main.html
+++ b/src/partials/shopping-list-main.html
@@ -1,4 +1,4 @@
-<h1 class="home-title shopping-title">
+<h1 class="home-title">
     <span class="home-title-decor">Shopping</span> List
 </h1>
 <div class="shopping-list-container js-shopping-list">
