--- a/src/css/layout/aside-support-ukraine.css
+++ b/src/css/layout/aside-support-ukraine.css
@@ -15,7 +15,7 @@
   gap: 20px;
   height: 188px;
   padding-left: 40px;
-  overflow: hidden;
+  overflow: auto;
 }
 @media only screen and (min-width: 768px) {
   .sup-content-wrp {
