add counter book in list

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
           <svg сlass="cart" width="20" height="20">
             <use href="./images/sprite.svg#uil_cart"></use>
           </svg>
-          <span class="header-shopping-count"></span>
+          <span class="header-shopping-count is-hidden"></span>
       </a>
       </li>
     </ul>
