--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,4 +8,4 @@
 @import './layout/burger-menu.css';
 @import './layout/loader.css';
 @import './layout/scroll-up.css';
-@import './layout/dark-theme.css';
+/* @import './layout/dark-theme.css'; */
