--- a/src/css/layout/aside-categories.css
+++ b/src/css/layout/aside-categories.css
@@ -38,7 +38,7 @@
   font-weight: 400;
   font-size: 16px;
   letter-spacing: -0.02em;
-  color: rgba(17, 17, 17, 0.6);
+  color: var(--aside-text-color);
   margin-bottom: 24px;
 
   transition: color var(--transition-duration) var(--timing-function);
@@ -82,7 +82,7 @@
 
   letter-spacing: -0.02em;
 
-  color: rgba(17, 17, 17, 0.6);
+  color: var(--aside-text-color);
 
   margin-bottom: 24px;
 
