--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
       </li>
       <li class="header-nav-item">
         <a
-          class="header-nav-link shopping-list-header"
+          class="header-nav-link shopping-list-header js-header-shop-btn"
           href="./shopping-list.html"
           >SHOPPING LIST
           <svg class="cart" width="20" height="20">
