--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
       <li class="header-nav-item">
         <a
           class="header-nav-link shopping-list-header"
-          href="./shopping-list.html" 
+          href="./shopping-list.html"
           >SHOPPING LIST
           <svg сlass="cart" width="20" height="20">
             <use href="./images/sprite.svg#uil_cart"></use></svg
@@ -34,7 +34,7 @@
     </label>
 
     <button
-      class="menu-burger js-open-menu-hamburger"
+      class="menu-burger js-open-menu-burger"
       aria-expanded="false"
       aria-controls="mobile-menu"
     >
@@ -43,9 +43,21 @@
       </svg>
     </button>
 
+    
+
     <button class="button login-btn" type="button">
       Sign up<svg class="arrow-right" width="20" height="20">
         <use href="./images/sprite.svg#arrow-right"></use>
+      </svg>
+    </button>
+
+    <button
+      class="close-mobile-modal-btn"
+      type="button"
+      onclick="closeModal()"
+    >
+      <svg class="mobile-modal-icon-close" width="14" height="14">
+        <use href="./images/sprite.svg#x-close"></use>
       </svg>
     </button>
   </div>
