--- a/src/css/layout/modal-window.css
+++ b/src/css/layout/modal-window.css
@@ -26,7 +26,7 @@
   padding: 40px 24px;
 
   background-color: var(--modal-bg-color);
-  border: 2px solid var(--header-border-color);
+  border: 2px solid var(--border-color);
   border-radius: 18px;
 }
 
