--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
 
   <div class="switcher-burger">
     <label class="switch js-themes">
-      <input type="checkbox" />
+      <input type="checkbox" name="switcher_checkbox" />
       <span class="slider round"></span>
     </label>
 
@@ -49,19 +49,13 @@
       </svg>
     </button>
 
-    
-
     <button class="button login-btn" type="button">
       Sign up<svg class="arrow-right" width="20" height="20">
         <use href="./images/sprite.svg#arrow-right"></use>
       </svg>
     </button>
 
-    <button
-      class="close-mobile-modal-btn"
-      type="button"
-      onclick="closeModal()"
-    >
+    <button class="close-mobile-modal-btn" type="button" onclick="closeModal()">
       <svg class="mobile-modal-icon-close" width="14" height="14">
         <use href="./images/sprite.svg#x-close"></use>
       </svg>
